--- a/game/src/Components/Square.css
+++ b/game/src/Components/Square.css
@@ -3,4 +3,16 @@
     height: 100px;
     background:#fff ;
     border: 1px solid #222222;
+    cursor: pointer;
+    outline: none;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.square:hover{
+    background: #d1cccc;
+    transition: .3s all ease;
 }
