--- a/gameSnake/snake-game/src/App.css
+++ b/gameSnake/snake-game/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #2d5ec0;
+  background-color: #6b7a96;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
 }
 
 .App .start-button{
-  background-color: #2d5ec0;
+  background-color: #425374;
   border-color: azure;
   color: aliceblue;
   font-size: 5vh;
