--- a/figma/main.css
+++ b/figma/main.css
@@ -1,28 +1,37 @@
-.block {
-    width: 1200px;
+
+
+.block{
+    margin: auto;
+    text-align: center;
+}
+
+.layer {
+    width: 100%;
     height: 61px;
     top: 7px;
     position: fixed;
     top: 0;
     left: 0;
     overflow: auto;
-    background: #FEFBF1;
     display: flex;
-    overflow: auto;  
+    overflow: auto; 
+    margin-top: 5px;
+    background: #c09c26;
 }
 
-.layer{
-    
-    margin: auto;
-    text-align: center;
-}
-
-.body{
+body{
     font-family: "Roboto";
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
     text-align: left;
-    
-    
+    background: #FEFBF1;
+    max-width: 720px;
+    width: 100%;
+    color: #703412;
+}
+
+.footer{
+    background-color:#084935;
+    color: #fcfcfc;
 }
