--- a/figma/main.css
+++ b/figma/main.css
@@ -1,4 +1,51 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
+body{
+    font-family: "Roboto",sans-serif;
+    font-size: 1em;
+    line-height: 135%;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    background: #FEFBF1;
+    max-width: 720px;
+    width: 100%;
+    height: 100%;
+    color: #703412;
+
+}
+
+a{
+    color: #8be4f4;
+    text-decoration:none;
+    transition: all.6s ease;
+    -moz-transition: all.6s ease;
+    -ms-transition: all.6s ease;
+}
+
+a:hover{
+    color: #8bf4e3;
+    text-decoration:none;
+    transition: all.6s ease;
+    -moz-transition: all.6s ease;
+    -ms-transition: all.6s ease;
+}
+
+a:active {color: #084935;}
+
+/* Selection block */
+::selection {background: #8be4f4; color: aquamarine;}
+::-moz-selection {background: #8be4f4; color: aquamarine;}
+::-webkit-selection {background: #8be4f4; color: aquamarine;}
+
+img{
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* для коректного сжатия избр*/
+}
 
 .block{
     margin: auto;
@@ -19,17 +66,7 @@
     background: #c09c26;
 }
 
-body{
-    font-family: "Roboto";
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    text-align: left;
-    background: #FEFBF1;
-    max-width: 720px;
-    width: 100%;
-    color: #703412;
-}
+
 
 .footer{
     background-color:#084935;
