--- a/figma/main.css
+++ b/figma/main.css
@@ -49,7 +49,7 @@ img{
 
 
 .block{
-    margin: auto;
+    /* margin: auto; */
     text-align: center;
     width: 1200px;
     height: 61px;
@@ -59,26 +59,19 @@ img{
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-}
-
-header{
     height: 61px;
     top: 7px;
     position: fixed;
-    /* top: 0; */
     left: 0;
     overflow: auto;
     display: flex;
-    overflow: auto; 
+    align-items: center;
+    justify-content: center;
+    /* overflow: auto;  */
     margin-top: 5px;
     background: #FEFBF1;
     width: 98%;
     min-height: 50px;
-    
-}
-
-header{
-    border-bottom: 2px solid silver;
     padding: 1%;
 }
 
@@ -121,16 +114,17 @@ footer{
 
 }
 
-.join{
+.wrapperText{
     width: 1200px;
     height: 572px;
     top: 68px;
     gap: 0px;
     opacity: 0px;
-    display: flex;
-    position: relative;
+    /* display: flex; */
+    /* position: relative; */
 }
-.lock{
+
+.textBusiness{
     width: 160px;
     height: 44px;
     top: 188px;
@@ -146,7 +140,7 @@ footer{
     position: relative;
 }
 
-.brand{
+.textBrand{
     display: flex;
     position: relative;
     width: 848px;
@@ -159,4 +153,31 @@ footer{
     font-weight: 400;
     line-height: 88px;
     text-align: left;
+}
+
+.wrapperImg{
+    display: flex;
+    /* position: relative; */
+    width: 1056px;
+    height: 1941px;
+    top: 633px;
+    left: 72px;
+    gap: 0px;
+    opacity: 0px;
+}
+
+.text{
+    display: flex;
+    position: absolute;
+
+    width: 571px;
+    height: 125px;
+    top: 637px;
+    left: 72px;
+    gap: 0px;
+    opacity: 0px;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 41.6px;
+    text-align: left;     
 }
