--- a/figma/main.css
+++ b/figma/main.css
@@ -1,183 +1,100 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    font-family: "Roboto",sans-serif;
-    font-size: 1em;
-    line-height: 135%;
-    font-weight: 400;
-    /* line-height: 21px; */
-    text-align: left;
-    background: #FEFBF1;
-    max-width: 720px;
-    width: 100%;
-    height: 100%;
-    color: #703412;
-
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1em;
+  line-height: 135%;
+  font-weight: 400;
+  text-align: left;
+  background: #fefbf1;
+  width: 100%;
+  height: 100%;
+  color: #703412;
 }
 
-a{
-    color: #8be4f4;
-    text-decoration:none;
-    transition: all.6s ease;
-    -moz-transition: all.6s ease;
-    -ms-transition: all.6s ease;
+a {
+  color: #000000;
+  text-decoration: none;
+  transition: all.6s ease;
+  -moz-transition: all.6s ease;
+  -ms-transition: all.6s ease;
 }
 
-a:hover{
-    color: #8bf4e3;
-    text-decoration:none;
-    transition: all.6s ease;
-    -moz-transition: all.6s ease;
-    -ms-transition: all.6s ease;
+a:hover {
+  color: #8bf4e3;
+  text-decoration: none;
+  transition: all.6s ease;
+  -moz-transition: all.6s ease;
+  -ms-transition: all.6s ease;
 }
 
-a:active {color: #084935;}
-
-/* Selection block */
-::selection {background: #8be4f4; color: aquamarine;}
-::-moz-selection {background: #8be4f4; color: aquamarine;}
-::-webkit-selection {background: #8be4f4; color: aquamarine;}
-
-img{
-    max-width: 100%;
-    height: auto;
-    width: auto\9; /* для коректного сжатия избр*/
+a:active {
+  color: #084935;
 }
 
-
-.wrapperHeader{
-    /* margin: auto; */
-    text-align: center;
-    width: 1200px;
-    height: 61px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: "Roboto";
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    height: 61px;
-    top: 7px;
-    position: fixed;
-    left: 0;
-    overflow: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* overflow: auto;  */
-    margin-top: 5px;
-    background: #FEFBF1;
-    width: 98%;
-    min-height: 50px;
-    padding: 1%;
+.wrapper {
+  max-width: 1060px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
-footer{
-    background-color:#084935;
-    color: #fcfcfc;
-    width: 98%;
-    min-height: 50px;
-    margin-top: 10px;
+.wrapperHeader {
+  display: flex;
+  justify-content: center;
+  column-gap: 40px;
+  height: 61px;
+  align-items: center;
 }
 
-#Blog{
-    width: 30px;
-    height: 21px;
-    top: 27px;
-    left: 503px;
-    gap: 0px;
-    opacity: 0px;
- 
+.textBusiness {
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 44px;
+  letter-spacing: 1.600000023841858px;
+  text-align: left;
+
+  margin-bottom: 21px;
 }
 
-#Press{
-    width: 36px;
-    height: 21px;
-    top: 27px;
-    left: 573px;
-    gap: 0px;
-    opacity: 0px;   
-    margin-left: 40px;    
+.textBrand {
+  font-size: 80px;
+  font-weight: 400;
+  line-height: 88px;
+  text-align: left;
+  max-width: 850px;
+}
+.wrapperText {
+  padding: 120px 0;
 }
 
-#Join{
-    width: 48px;
-    height: 21px;
-    top: 27px;
-    left: 649px;
-    gap: 0px;
-    opacity: 0px;
-    margin-left: 40px;
-
+.textThem {
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 41.6px;
+  text-align: left;
+  max-width: 571px;
+  margin-bottom: 200px;
 }
 
-.wrapperText{
-    width: 1200px;
-    height: 572px;
-    top: 68px;
-    gap: 0px;
-    opacity: 0px;
-    /* display: flex; */
-    /* position: relative; */
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.textBusiness{
-    width: 160px;
-    height: 44px;
-    top: 188px;
-    left: 72px;
-    gap: 0px;
-    opacity: 0px;
-    font-size: 11px;
-    font-weight: 400;
-    line-height: 44px;
-    letter-spacing: 1.600000023841858px;
-    text-align: left;
-    display: flex;
-    position: relative;
+.card {
+  border: 1px solid red;
+}
+.card img {
+  width: 312px;
+  object-fit: cover;
+  transform: scale(120%);
 }
 
-.textBrand{
-    display: flex;
-    position: relative;
-    width: 848px;
-    height: 264px;
-    top: 253px;
-    left: 72px;
-    gap: 0px;
-    opacity: 0px;
-    font-size: 80px;
-    font-weight: 400;
-    line-height: 88px;
-    text-align: left;
-}
-
-.wrapperImg{
-    display: flex;
-    /* position: relative; */
-    width: 1056px;
-    height: 1941px;
-    top: 633px;
-    left: 72px;
-    gap: 0px;
-    opacity: 0px;
-}
-
-.textThem{
-    display: flex;
-    position: absolute;
-
-    width: 571px;
-    height: 125px;
-    top: 637px;
-    left: 72px;
-    gap: 0px;
-    opacity: 0px;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 41.6px;
-    text-align: left;     
+.imgContainer {
+  overflow: hidden;
+  border-radius: 15px;
+  margin-right: 60px;
 }
