--- a/figma/main.css
+++ b/figma/main.css
@@ -121,5 +121,18 @@ footer {
 
 .textFooter {
   text-align: left;
-  padding: 120px 0;
+  padding: 120px 0 24px 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 1.600000023841858px;
+  text-align: left;
+}
+
+h4 {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 38.4px;
+  text-align: left;
+  margin-bottom: 110px;
 }
