--- a/figma/main.css
+++ b/figma/main.css
@@ -93,7 +93,7 @@ a:active {
 .card img {
   width: 312px;
   object-fit: cover;
-  transform: scale(120%);
+  transform: scale(110%);
 }
 
 .imgContainer {
@@ -101,12 +101,14 @@ a:active {
   border-radius: 15px;
   margin-right: 60px;
   margin-bottom: 32px;
+  /* margin-left: 5px; */
 }
 
 .imgContainerRight {
   overflow: hidden;
   border-radius: 15px;
   margin-bottom: 32px;
+  /* margin-left: 160px; */
 }
 
 p {
