--- a/figma/main.css
+++ b/figma/main.css
@@ -15,38 +15,23 @@ body {
   color: #703412;
 }
 
-/* Для екранів ширше 768px (планшети і десктопи) */
+/* Для екранів ширше 768px  */
 @media (min-width: 768px) {
   body {
     font-size: 1em;
   }
-  /* textBrand{   */
-  /* font-size: 60px; */
-  /* font-weight: 400; */
-  /* line-height: 88px; */
-  /* text-align: left; */
-  /* max-width: 850px; */
-  /* } */
 }
-
-/* Для екранів менше 768px (мобільні пристрої) */
+/* Для екранів менше 768px  */
 @media (max-width: 767px) {
   body {
     font-size: 16px;
   }
 }
 
-/* Для дуже маленьких екранів (менше 480px) */
+/* Для дуже маленьких екранів */
 @media (max-width: 480px) {
   body {
     font-size: 14px;
-  }
-  textBrand {
-    font-size: 60px;
-    font-weight: 300px;
-    line-height: 68px;
-    text-align: left;
-    max-width: 750px;
   }
 }
 
@@ -117,35 +102,43 @@ a:active {
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+  flex-direction: normal;
 }
 
 .card {
-  /* border: 1px solid red; */
+  display: flex;
+  flex-wrap: wrap;
   text-align: left;
   max-width: 312px;
-  margin-bottom: 66px;
+  column-gap: 166px;
+  /* странная херня и как она работает?? */
+  /* margin-bottom: 66px; */
 }
 .card img {
-  border: 1px solid violet;
+  display: flex;
+  flex-wrap: wrap;
   width: 312px;
   object-fit: cover;
-  transform: scale(110%);
+  transform: scale(100%);
+  row-gap: 166px;
 }
 
 .imgContainer {
-  /* border: 3px solid rgb(0, 255, 13); */
-  overflow: hidden;
   display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  flex-flow: row wrap;
   justify-content: center;
-  /* align-items: center; */
   border-radius: 15px;
-  margin-right: 60px;
-  margin-bottom: 32px;
-  /* margin-left: 5px; */
+  gap: 32px 60px;
+  width: 252px;
+  height: 312px;
+  /* margin-right: 60px; */
+  /* margin-bottom: 32px; */
 }
 
 .imgContainerRight {
-  border: 45px solid rgb(17, 0, 255);
   overflow: hidden;
   border-radius: 15px;
   margin-bottom: 32px;
