--- a/figma/main.css
+++ b/figma/main.css
@@ -176,12 +176,12 @@ h4 {
 .partsFooter {
   display: flex;
   flex-wrap: wrap;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-  text-underline-position: from-font;
+  text-underline-position: "from-font";
   text-decoration-skip-ink: none;
 }
 
