--- a/figma/main.css
+++ b/figma/main.css
@@ -103,50 +103,40 @@ a:active {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  flex-direction: normal;
+  gap: 65px 30px;
 }
 
 .card {
-  display: flex;
-  flex-wrap: wrap;
   text-align: left;
   max-width: 312px;
-  column-gap: 166px;
-  /* странная херня и как она работает?? */
-  /* margin-bottom: 66px; */
 }
 .card img {
-  display: flex;
-  flex-wrap: wrap;
   width: 312px;
   object-fit: cover;
-  transform: scale(100%);
-  row-gap: 166px;
+}
+
+.card h3 {
+  max-width: 250px;
+  margin-bottom: 11px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.card p {
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 18px;
+  letter-spacing: 1.6px;
 }
 
 .imgContainer {
-  display: flex;
-  flex-wrap: wrap;
-  overflow: hidden;
-  flex-flow: row wrap;
-  justify-content: center;
-  border-radius: 15px;
-  gap: 32px 60px;
-  width: 252px;
-  height: 312px;
-  /* margin-right: 60px; */
-  /* margin-bottom: 32px; */
-}
-
-.imgContainerRight {
   overflow: hidden;
   border-radius: 15px;
-  margin-bottom: 32px;
-  /* margin-left: 160px; */
-}
-
-p {
-  margin-bottom: 5px;
+  width: 312px;
+  margin-bottom: 34px;
 }
 
 footer {
@@ -204,11 +194,4 @@ h4 {
 
 .brands {
   margin-top: 20px;
-}
-
-/* imgContainerRight */
-
-h3 {
-  max-width: 250px;
-  margin-bottom: 11px;
 }
